--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -102,7 +102,6 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr> <td>Morning</td>
 	 <tr> <td>9:00am</td>  <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
       <tr> <td> 10:30am</td> <td> BREAK </td>
 	<tr> <td>10:45am</td>    <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets (continued)</a></td></tr>
@@ -110,7 +109,7 @@ The schedule for the different curricula are listed here:
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Jan 15</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td>
 	 <tr> <td>9:00am</td>  <td><a href="https://datacarpentry.org/r-socialsci/01-intro-to-r/index.html">Introduction to R</a></td></tr>
@@ -122,7 +121,7 @@ The schedule for the different curricula are listed here:
 </div>
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Jan 22</h3>
     <table class="table table-striped">
       <tr> <td>9:00am</td> <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Starting with Data (continued)</a></td></tr>
       <tr> <td> 10:30am</td> <td> BREAK </td>
@@ -131,7 +130,7 @@ The schedule for the different curricula are listed here:
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Jan 29</h3>
     <table class="table table-striped">
       <tr> <td>9:00am</td> <td><a href="https://datacarpentry.org/r-socialsci/04-ggplot2/index.html">Data Visualization with ggplot2</a></td></tr>
       <tr> <td> 10:30am</td> <td> BREAK </td>
