--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -103,9 +103,9 @@ The schedule for the different curricula are listed here:
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
 	 <tr> <td>9:00am</td>  <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
-      <tr> <td> 10:30am</td> <td> BREAK </td>
+	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td>    <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets (continued)</a></td></tr>
-      <tr> <td> 12:30pm</td> <td> END </td>
+	    <tr> <td> 12:30pm</td> <td> END </td></tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -113,7 +113,7 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">
       <tr> <td>Morning</td>
 	 <tr> <td>9:00am</td>  <td><a href="https://datacarpentry.org/r-socialsci/01-intro-to-r/index.html">Introduction to R</a></td></tr>
-      <tr> <td> 10:30am</td> <td> BREAK </td>
+	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td>     <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Starting with Data </a></td></tr>
       <tr> <td> 12:30pm</td> <td> END </td>
     </table>
@@ -124,7 +124,7 @@ The schedule for the different curricula are listed here:
     <h3>Jan 22</h3>
     <table class="table table-striped">
       <tr> <td>9:00am</td> <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Starting with Data (continued)</a></td></tr>
-      <tr> <td> 10:30am</td> <td> BREAK </td>
+	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td> <td><a href="https://datacarpentry.org/r-socialsci/03-dplyr-tidyr/index.html">Data Wrangling with dplyr and tidyr</a></td></tr>
       <tr> <td> 12:30pm</td> <td> END </td>
     </table>
@@ -133,9 +133,9 @@ The schedule for the different curricula are listed here:
     <h3>Jan 29</h3>
     <table class="table table-striped">
       <tr> <td>9:00am</td> <td><a href="https://datacarpentry.org/r-socialsci/04-ggplot2/index.html">Data Visualization with ggplot2</a></td></tr>
-      <tr> <td> 10:30am</td> <td> BREAK </td>
+	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td> <td><a href="https://datacarpentry.org/r-socialsci/04-ggplot2/index.html">Data Visualization with ggplot2 (continued)</a></td></tr>
-      <tr> <td> 12:30pm</td> <td> END </td>
+	    <tr> <td> 12:30pm</td> <td> END </td></tr>
 	   <tr> <td>After</td> <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
       </tr>
     </table>
