--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -114,7 +114,7 @@ The schedule for the different curricula are listed here:
 	 <tr> <td>9:00am</td>  <td><a href="https://datacarpentry.org/r-socialsci/01-intro-to-r/index.html">Introduction to R</a></td></tr>
 	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td>     <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Starting with Data </a></td></tr>
-      <tr> <td> 12:30pm</td> <td> END </td>
+	    <tr> <td> 12:30pm</td> <td> END </td></tr>
     </table>
   </div>
 </div>
@@ -125,7 +125,7 @@ The schedule for the different curricula are listed here:
       <tr> <td>9:00am</td> <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Starting with Data (continued)</a></td></tr>
 	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td> <td><a href="https://datacarpentry.org/r-socialsci/03-dplyr-tidyr/index.html">Data Wrangling with dplyr and tidyr</a></td></tr>
-      <tr> <td> 12:30pm</td> <td> END </td>
+	    <tr> <td> 12:30pm</td> <td> END </td></tr>
     </table>
   </div>
   <div class="col-md-6">
