--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -14,7 +14,7 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">
       <tr>
 	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+	<td><a href="{{ site.pre_survey }}{{ site.carpentry-id }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
@@ -135,7 +135,7 @@ The schedule for the different curricula are listed here:
 	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td> <td><a href="https://datacarpentry.org/r-socialsci/04-ggplot2/index.html">Data Visualization with ggplot2 (continued)</a></td></tr>
 	    <tr> <td> 12:30pm</td> <td> END </td></tr>
-	   <tr> <td>After</td> <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td> </tr>
+	   <tr> <td>After</td> <td><a href="{{ site.post_survey }}{{ site.carpentry-id }}" target="_blank">Post-workshop survey</a></td> </tr>
     </table>
   </div>
 </div>
