--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -122,7 +122,7 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Jan 22</h3>
     <table class="table table-striped">
-      <tr> <td>9:00am</td> <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Starting with Data (continued)</a></td></tr>
+      <tr> <td>9:00am</td> <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Review & Start Data Wrangling</a></td></tr>
 	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td> <td><a href="https://datacarpentry.org/r-socialsci/03-dplyr-tidyr/index.html">Data Wrangling with dplyr and tidyr</a></td></tr>
 	    <tr> <td> 12:30pm</td> <td> END </td></tr>
