--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -111,7 +111,7 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Jan 15</h3>
     <table class="table table-striped">
-	 <tr> <td>9:00am</td>  <td><a href="https://datacarpentry.org/r-socialsci/01-intro-to-r/index.html">Introduction to R</a></td></tr>
+	 <tr> <td>9:00am</td>  <td><a href="https://datacarpentry.org/r-socialsci/01-intro-to-r/index.html">Introduction to R</a></td> (<a href="https://dsc.gmu.edu/files/Intro_to_R_template.txt">Script Template</a></tr>
 	    <tr> <td> 10:30am</td> <td> BREAK </td></tr>
 	<tr> <td>10:45am</td>     <td><a href="https://datacarpentry.org/r-socialsci/02-starting-with-data/index.html">Starting with Data </a></td></tr>
 	    <tr> <td> 12:30pm</td> <td> END </td></tr>
